responsive-web-developer/simple-homepage/style.css
@font-face {
  font-family: "Poppins";
  font-weight: 400;
  src: url(./fonts/Poppins-Regular.ttf);
}

@font-face {
  font-family: "Poppins";
  font-weight: 500;
  src: url(./fonts/Poppins-Medium.ttf);
}

@font-face {
  font-family: "Poppins";
  font-weight: 600;
  src: url(./fonts/Poppins-SemiBold.ttf);
}

@font-face {
  font-family: "Poppins";
  font-weight: 700;
  src: url(./fonts/Poppins-Bold.ttf);
}

:root {
  --color-neutral-100: hsl(0, 0%, 100%);
  --color-neutral-200: hsl(205, 86%, 97%);
  --color-neutral-500: hsl(220, 1%, 57%);
  --color-neutral-800: hsl(210, 33%, 20%);
  --color-neutral-900: hsl(225, 41%, 11%);
  --color-primary-blue: hsl(227, 66%, 49%);
  --font-size-x-large: 3.75rem;
  --font-size-large: 1.125rem;
  --font-size-medium: 1rem;
  --font-size-small: 0.875rem;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

img {
  display: block;
  max-width: 100%;
}

.container {
  margin-inline: auto;
  max-width: 1400px;
  width: calc(100% - 10em);
}

.mobile-only {
  display: none !important;
}

body {
  background-color: var(--color-neutral-200);
  color: var(--color-neutral-800);
  font-family: "Poppins", system-ui, sans-serif;
  font-size: var(--font-size-large);
  font-weight: 500;
  margin: 0;
  min-height: 100dvh;
}

header {
  align-items: center;
  display: flex;
  justify-content: space-between;
  padding-block: 2em 0;
}

header ul {
  display: flex;
  gap: 2em;
  list-style: none;
  padding-left: 0;
}

header a {
  color: var(--color-neutral-500);
  font-size: var(--font-size-small);
  text-decoration: none;
}

header a[data-current] {
  color: var(--color-neutral-800);
}

.header__mode-toggle {
  align-items: center;
  background-color: var(--color-neutral-800);
  border: 0;
  border-radius: 1000em;
  cursor: pointer;
  display: flex;
  height: 2em;
  padding: 3px;
  width: 4em;
}

.mode-toggle__inner {
  aspect-ratio: 1;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 1.25em;
  border-radius: 50%;
  display: block;
  width: 50%;
}

.mode-toggle__inner.dark {
  background-image: url(./images/Moon_fill_light.svg);
}

.mode-toggle__inner.light {
  background-color: var(--color-neutral-100);
  background-image: url(./images/Sun_fill.svg);
}

.header__hamburger {
  display: none;
}

main {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 4.25em;
}

.main__eyebrow {
  color: var(--color-neutral-900);
  font-size: var(--font-size-small);
  font-weight: 600;
  text-transform: uppercase;
}

h1 {
  font-size: var(--font-size-x-large);
  margin-block: 0;
}

h1 + p {
  max-width: 28em;
}

.main__cta {
  display: flex;
  gap: 2.25em;
}

.main__cta > a {
  display: grid;
  height: 3em;
  place-items: center;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

.cta__button {
  background-color: var(--color-primary-blue);
  border-radius: 0.5em;
  color: var(--color-neutral-100);
  padding: 0;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  width: 10em;
}

.main__features {
  display: flex;
  font-size: var(--font-size-small);
  gap: 2em;
  margin-top: 3em;
  padding-left: 0;
  list-style: none;
}

.main__features > li {
  align-items: center;
  display: flex;
  gap: 0.5em;
}

.main__features > li::before {
  aspect-ratio: 1;
  background-image: url(./images/Done_ring_round_fill.svg);
  background-position: center;
  background-repeat: no-repeat;
  content: "";
  height: 2em;
  left: 0;
  top: 50%;
}

main > img {
  margin: auto;
  width: 550px;
}

@media (max-width: 75em) {
  main {
    gap: 5em;
    grid-template-columns: unset;
    padding-block-end: 5em;
  }

  main > img {
    order: -1;
  }
}

@media (max-width: 56.25em) {
  .mobile-only {
    display: flex !important;
  }

  .wide-only {
    display: none;
  }

  header > nav {
    background-color: var(--color-neutral-100);
    height: 100dvh;
    padding-block-start: 4em;
    position: fixed;
    right: -1000vw;
    top: 0;
    visibility: hidden;
    width: 60vw;
  }

  header > nav.show {
    right: 0;
    visibility: visible;
  }

  nav > ul {
    display: grid;
    text-align: center;
  }

  .header__mode-toggle {
    margin: auto;
  }

  header a {
    color: var(--color-neutral-500);
    font-size: 3rem;
    font-weight: 600;
  }

  .header__hamburger {
    aspect-ratio: 1;
    background-color: transparent;
    border: 0;
    cursor: pointer;
    display: grid;
    padding: 0;
    place-items: center;
    width: 2em;
    z-index: 1000;
  }

  .header__hamburger > span {
    background-color: var(--color-neutral-800);
    border-radius: 1000em;
    content: "";
    height: 5px;
    width: 100%;
  }
  /* 
  .header__hamburger.open > span:nth-child(1) {
    transform: rotate(45deg);
  }

  .header__hamburger.open > span:nth-child(2) {
    display: none;
  }

  .header__hamburger.open > span:nth-child(3) {
    transform: rotate(-45deg);
  } */
}

